# goodvibes

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
data/: emplacement_information.csv  signature_information.csv  target-run-log.csv
data/position/: L12_2023-04-10_1.csv  L12_2023-04-11.csv  L12_2023-04-12.csv  L16_2023-04-11.csv  target_1a.csv  target_1b.csv
data/postion/: L12_2023-04-10.csv  L16_2023-04-10.csv  target_1a.csv  target_1b.csv
data/signatures/: Node121-Ch1-17-2023_04_11_17_40_00-9866Hz.wav.xml  Node121-Ch1-18-2023_04_11_17_45_00-9866Hz.wav.xml  Node121-Ch1-19-2023_04_11_17_50_00-9866Hz.wav.xml  Node121-Ch1-24-2023_04_11_18_15_00-9866Hz.wav.xml  Node121-Ch1-25-2023_04_11_18_20_00-9866Hz.wav.xml  Node121-Ch1-30-2023_04_10_20_25_00-9866Hz.wav.xml  Node121-Ch1-31-2023_04_10_20_30_00-9865Hz.wav.xml  Node121-Ch1-32-2023_04_10_20_35_00-9866Hz.wav.xml  Node121-Ch1-33-2023_04_10_20_40_00-9865Hz.wav.xml  Node121-Ch1-34-2023_04_10_20_45_00-9866Hz.wav.xml  Node121-Ch1-35-2023_04_10_20_50_00-9866Hz.wav.xml  Node121-Ch1-36-2023_04_10_20_55_00-9865Hz.wav.xml  Node121-Ch1-37-2023_04_10_21_00_00-9866Hz.wav.xml  Node121-Ch1-38-2023_04_10_21_05_00-9865Hz.wav.xml  (+188 more)
goodvibes/: models.py  signal.py  spectrum.py  zero.py
notebooks/: data-exploration.ipynb  fundemental-freq.ipynb
scripts/: build_target_datasets.py  build_training_dataset.py  extract_in_range_signals.py  extract_noise_signals.py  extract_noise_spectrums.py  extract_spectrums.py  organize_training_data.py  parse_trajectories.py  run.py  test.py  train_detection.py
(+611 files in other folders)
